--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy
 
 env:
   VITE_VAPID_KEY: BGdL595OYfn0whXOJSJfrKsQu0hE4XDm3mH_F8a00cdOqbPXcCyTljPWuIU_inEJNYkmjCUr9eAmiIJnvmkKxVY
-
+  VITE_PUSH_URL: https://rockstar-push.glitch.me/send-push
 on:
   push:
     branches:
