--- a/package.json
+++ b/package.json
@@ -1,36 +1,35 @@
 {
   "name": "rockstar-pwa-push",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20.2.4",
-    "@types/react": "^18.2.7",
-    "@types/react-dom": "^18.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "@vitejs/plugin-react": "^4.0.0",
-    "eslint": "^8.41.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.1",
-    "typescript": "4.9.5",
-    "vite": "^4.3.8",
-    "vite-plugin-checker": "^0.6.0",
-    "vite-plugin-pwa": "^0.15.1",
-    "vite-tsconfig-paths": "^4.2.0",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4"
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.9",
+    "typescript": "5.5.4",
+    "vite": "^5.4.1",
+    "vite-plugin-checker": "^0.7.2",
+    "vite-plugin-pwa": "^0.20.1",
+    "vite-tsconfig-paths": "^5.0.1"
+  },
+  "overrides": {
+    "micromatch": "4.0.7",
+    "braces": "3.0.3"
   }
 }
