--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vite": "^5.4.1",
     "vite-plugin-checker": "^0.7.2",
     "vite-plugin-pwa": "^0.20.1",
+    "vite-plugin-readable-css-modules": "0.5.0",
     "vite-tsconfig-paths": "^5.0.1"
   },
   "overrides": {
